[gd_scene load_steps=2 format=3 uid="uid://b7i0o2ynwdbgj"]

[ext_resource type="Script" uid="uid://cmklpvsgb6th0" path="res://Scripts/DialogueUI.gd" id="1_s2htl"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_s2htl")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -187.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="TextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NextIndicator" type="Button" parent="."]
offset_left = 1068.0
offset_top = 734.0
offset_right = 1253.0
offset_bottom = 781.0
theme_override_font_sizes/font_size = 30
text = "继续"

[node name="ChoiceContainer" type="VBoxContainer" parent="."]
offset_left = 954.0
offset_top = 720.0
offset_right = 1258.0
offset_bottom = 784.0
